Fixed post link wrapping.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -355,7 +355,6 @@ a.site-title {
     font-weight: 400;
     font-style: italic;
     color: #fef9c7;
-    overflow: hidden;
   }
 
   .post-link:hover {
@@ -644,8 +643,6 @@ a.site-title {
     font-weight: 400;
     font-style: italic;
     color: #fef9c7;
-    height: 40px;
-    overflow: hidden;
   }
 
   .post-link:hover {
